Switched top 90vh to top 90% in an attempt to fix issue on safari

--- a/src/app/shared/components/account/account-navbar/account-navbar.component.css
+++ b/src/app/shared/components/account/account-navbar/account-navbar.component.css
@@ -30,8 +30,11 @@ nav p {
   background-color: var(--mainblue);
   color: white;
 
+  float: none;
+  overflow: hidden;
+
   position: fixed;
-  top: 90vh;
+  top: 90%;
   width: 100%;
 
   z-index: 10;
